external-crates/move/crates/move-compiler/tests/move_check/parser/positional_struct_pack.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03013]: positional call mismatch
  ┌─ tests/move_check/parser/positional_struct_pack.move:7:17
  │
4 │     struct Foo has drop { x: u64 }
  │            --- 'Foo' is declared here
  ·
7 │         let _ = Foo(0);
  │                 ^^^^^^ Invalid struct instantiation. Named struct declarations require named instantiations

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/positional_struct_pack.move:7:17
  │
7 │         let _ = Foo(0);
  │                 ^^^^^^ Positional fields are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E03010]: unbound field
  ┌─ tests/move_check/parser/positional_struct_pack.move:7:17
  │
7 │         let _ = Foo(0);
  │                 ^^^^^^ Unbound field '0' in '0x42::M::Foo'

error[E04016]: too few arguments
  ┌─ tests/move_check/parser/positional_struct_pack.move:7:17
  │
7 │         let _ = Foo(0);
  │                 ^^^^^^ Missing argument for field 'x' in '0x42::M::Foo'
